Fonts updated, css for hyperlinks moved to general

--- a/root/about.html
+++ b/root/about.html
@@ -25,8 +25,7 @@
             This tool is currently created and maintained by me, Jethro Schoppenhorst. You can
             learn more about me on my own website.
         </p>
-        <a href="https://www.jethros.space/" target="_blank">
-        <div class="goto-button">
+        <a class="goto-button" href="https://www.jethros.space/" target="_blank">
             <p>Portfolio - jethros.space</p>
             <svg viewBox = "0 0 100 100">
                 <polygon points="0,0 50,0 100,50 50,100, 0,100"/>
@@ -40,7 +39,6 @@
             <svg class="chevron-3" viewBox = "0 0 100 100">
                 <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
             </svg>
-        </div>
         </a>
         <h2>Is this project open source?</h2>
         <p>
@@ -48,8 +46,7 @@
             open under the MIT license. Feel free to reuse any of the components on this website
             for any purpose.
         </p>
-        <a href="https://github.com/JSchoppe/educational-math-site" target="_blank">
-        <div class="goto-button">
+        <a class="goto-button" href="https://github.com/JSchoppe/educational-math-site" target="_blank">
             <p>Github Repository</p>
             <svg viewBox = "0 0 100 100">
                 <polygon points="0,0 50,0 100,50 50,100, 0,100"/>
@@ -63,7 +60,6 @@
             <svg class="chevron-3" viewBox = "0 0 100 100">
                 <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
             </svg>
-        </div>
         </a>
         <h3>What tools were used to make this?</h3>
         <p>
@@ -71,8 +67,7 @@
             on this website has been written in plain HTML/CSS/JavaScript. Special thanks to the
             contributing developers for Blender, Inkscape, Paint.NET, VS Code, and Google Fonts.
         </p>
-        <a href="https://aws.amazon.com/" target="_blank">
-        <div class="goto-button">
+        <a class="goto-button" href="https://aws.amazon.com/" target="_blank">
             <p>Amazon Web Services</p>
             <svg viewBox = "0 0 100 100">
                 <polygon points="0,0 50,0 100,50 50,100, 0,100"/>
@@ -86,10 +81,8 @@
             <svg class="chevron-3" viewBox = "0 0 100 100">
                 <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
             </svg>
-        </div>
         </a>
-        <a href="https://www.blender.org/" target="_blank">
-        <div class="goto-button">
+        <a class="goto-button" href="https://www.blender.org/" target="_blank">
             <p>Blender</p>
             <svg viewBox = "0 0 100 100">
                 <polygon points="0,0 50,0 100,50 50,100, 0,100"/>
@@ -103,10 +96,8 @@
             <svg class="chevron-3" viewBox = "0 0 100 100">
                 <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
             </svg>
-        </div>
         </a>
-        <a href="https://inkscape.org/" target="_blank">
-        <div class="goto-button">
+        <a class="goto-button" href="https://inkscape.org/" target="_blank">
             <p>Inkscape</p>
             <svg viewBox = "0 0 100 100">
                 <polygon points="0,0 50,0 100,50 50,100, 0,100"/>
@@ -120,10 +111,8 @@
             <svg class="chevron-3" viewBox = "0 0 100 100">
                 <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
             </svg>
-        </div>
         </a>
-        <a href="https://www.getpaint.net/" target="_blank">
-        <div class="goto-button">
+        <a class="goto-button" href="https://www.getpaint.net/" target="_blank">
             <p>Paint.NET</p>
             <svg viewBox = "0 0 100 100">
                 <polygon points="0,0 50,0 100,50 50,100, 0,100"/>
@@ -137,10 +126,8 @@
             <svg class="chevron-3" viewBox = "0 0 100 100">
                 <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
             </svg>
-        </div>
         </a>
-        <a href="https://code.visualstudio.com/" target="_blank">
-        <div class="goto-button">
+        <a class="goto-button" href="https://code.visualstudio.com/" target="_blank">
             <p>Visual Studio Code</p>
             <svg viewBox = "0 0 100 100">
                 <polygon points="0,0 50,0 100,50 50,100, 0,100"/>
@@ -154,10 +141,8 @@
             <svg class="chevron-3" viewBox = "0 0 100 100">
                 <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
             </svg>
-        </div>
         </a>
-        <a href="https://fonts.google.com/" target="_blank">
-        <div class="goto-button">
+        <a class="goto-button" href="https://fonts.google.com/" target="_blank">
             <p>Google Fonts</p>
             <svg viewBox = "0 0 100 100">
                 <polygon points="0,0 50,0 100,50 50,100, 0,100"/>
@@ -171,7 +156,6 @@
             <svg class="chevron-3" viewBox = "0 0 100 100">
                 <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
             </svg>
-        </div>
         </a>
         <h3>Why not use libraries?</h3>
         <p>
