--- a/root/home.html
+++ b/root/home.html
@@ -86,12 +86,23 @@
                 <div class="tool-preview-wrapper">
                     <canvas id="center-of-gravity-canvas"></canvas>
                 </div>
-                <div class="goto-tool-button">
-                    <a href="/numerical-analysis/lagrange-polynomial.html">
-                        Explore Center of Gravity
+                <a href="/numerical-analysis/lagrange-polynomial.html" target="_blank">
+                    <div class="goto-button">
+                        <p>Explore Center of Gravity</p>
+                        <svg viewBox = "0 0 100 100">
+                            <polygon points="0,0 50,0 100,50 50,100, 0,100"/>
+                        </svg>
+                        <svg class="chevron-1" viewBox = "0 0 100 100">
+                            <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
+                        </svg>
+                        <svg class="chevron-2" viewBox = "0 0 100 100">
+                            <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
+                        </svg>
+                        <svg class="chevron-3" viewBox = "0 0 100 100">
+                            <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
+                        </svg>
+                    </div>
                     </a>
-                    <img src="/images/decorations/pointing-edge-right.svg">
-                </div>
             </div>
         </div>
         <div class="tool-info-wrapper">
@@ -137,12 +148,23 @@
                 <div class="tool-preview-wrapper">
                     <canvas id="bezier-canvas"></canvas>
                 </div>
-                <div class="goto-tool-button">
-                    <a href="/numerical-analysis/lagrange-polynomial.html">
-                        Explore Bezier Curves
+                <a href="/numerical-analysis/lagrange-polynomial.html" target="_blank">
+                    <div class="goto-button">
+                        <p>Explore Bezier Curvers</p>
+                        <svg viewBox = "0 0 100 100">
+                            <polygon points="0,0 50,0 100,50 50,100, 0,100"/>
+                        </svg>
+                        <svg class="chevron-1" viewBox = "0 0 100 100">
+                            <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
+                        </svg>
+                        <svg class="chevron-2" viewBox = "0 0 100 100">
+                            <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
+                        </svg>
+                        <svg class="chevron-3" viewBox = "0 0 100 100">
+                            <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
+                        </svg>
+                    </div>
                     </a>
-                    <img src="/images/decorations/pointing-edge-right.svg">
-                </div>
             </div>
         </div>
         <div class="tool-info-wrapper">
@@ -173,12 +195,23 @@
                 <div class="tool-preview-wrapper">
                     <canvas id="lagrange-canvas"></canvas>
                 </div>
-                <div class="goto-tool-button">
-                    <a href="/numerical-analysis/lagrange-polynomial.html">
-                        Explore Lagrange Polynomials
+                <a href="/numerical-analysis/lagrange-polynomial.html" target="_blank">
+                    <div class="goto-button">
+                        <p>Explore Lagrange Polynomial</p>
+                        <svg viewBox = "0 0 100 100">
+                            <polygon points="0,0 50,0 100,50 50,100, 0,100"/>
+                        </svg>
+                        <svg class="chevron-1" viewBox = "0 0 100 100">
+                            <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
+                        </svg>
+                        <svg class="chevron-2" viewBox = "0 0 100 100">
+                            <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
+                        </svg>
+                        <svg class="chevron-3" viewBox = "0 0 100 100">
+                            <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
+                        </svg>
+                    </div>
                     </a>
-                    <img src="/images/decorations/pointing-edge-right.svg">
-                </div>
             </div>
         </div>
         <div class="tool-info-wrapper">
@@ -222,12 +255,23 @@
                 <div class="tool-preview-wrapper">
                     <canvas id="spline-canvas"></canvas>
                 </div>
-                <div class="goto-tool-button">
-                    <a href="/numerical-analysis/lagrange-polynomial.html">
-                        Explore Spline Generation
+                <a href="/numerical-analysis/lagrange-polynomial.html" target="_blank">
+                    <div class="goto-button">
+                        <p>Explore Spline Generation</p>
+                        <svg viewBox = "0 0 100 100">
+                            <polygon points="0,0 50,0 100,50 50,100, 0,100"/>
+                        </svg>
+                        <svg class="chevron-1" viewBox = "0 0 100 100">
+                            <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
+                        </svg>
+                        <svg class="chevron-2" viewBox = "0 0 100 100">
+                            <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
+                        </svg>
+                        <svg class="chevron-3" viewBox = "0 0 100 100">
+                            <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
+                        </svg>
+                    </div>
                     </a>
-                    <img src="/images/decorations/pointing-edge-right.svg">
-                </div>
             </div>
         </div>
     </main>
