Abstracted scaling canvas behavior
Multiple classes can now use the behavior of the canvas that scales to the pixel density of the rect on the device.

--- a/root/about.html
+++ b/root/about.html
@@ -164,6 +164,7 @@
         </p>
     </main>
     <canvas></canvas>
+    <script src="scripts/instance-objects/scaling-canvas.js"></script>
     <script src="scripts/instance-objects/graph-output.js"></script>
     <script src="scripts/page-logic/about.js"></script>
 </body>
