--- a/root/home.html
+++ b/root/home.html
@@ -275,6 +275,7 @@
             </div>
         </div>
     </main>
+    <script src="scripts/instance-objects/scaling-canvas.js"></script>
     <script src="scripts/instance-objects/graph-output.js"></script>
     <script src="scripts/page-logic/home.js"></script>
 </body>
