Abstracted graph grid and function
Drawing of graph elements is no longer handled by the graph output class. It is now much easier to make drawn objects in a more modular way.

--- a/root/home.html
+++ b/root/home.html
@@ -277,6 +277,8 @@
     </main>
     <script src="scripts/instance-objects/scaling-canvas.js"></script>
     <script src="scripts/instance-objects/graph-output.js"></script>
+    <script src="scripts/instance-objects/draw-commands/grid-drawer.js"></script>
+    <script src="scripts/instance-objects/draw-commands/function-drawer.js"></script>
     <script src="scripts/page-logic/home.js"></script>
 </body>
 </html>
