--- a/root/about.html
+++ b/root/about.html
@@ -166,6 +166,7 @@
     <canvas></canvas>
     <script src="scripts/instance-objects/scaling-canvas.js"></script>
     <script src="scripts/instance-objects/graph-output.js"></script>
+    <script src="scripts/instance-objects/draw-commands/grid-drawer.js"></script>
     <script src="scripts/page-logic/about.js"></script>
 </body>
 </html>
