Reorganized homepage html/css/js
Added more comments and refactored homepage javascript to fix bugs with page scaling.

--- a/root/home.html
+++ b/root/home.html
@@ -86,7 +86,7 @@
                 <div class="tool-preview-wrapper">
                     <canvas id="center-of-gravity-canvas"></canvas>
                 </div>
-                <a href="/numerical-analysis/lagrange-polynomial.html" target="_blank">
+                <a href="/numerical-analysis/lagrange-polynomial.html">
                     <div class="goto-button">
                         <p>Explore Center of Gravity</p>
                         <svg viewBox = "0 0 100 100">
@@ -148,7 +148,7 @@
                 <div class="tool-preview-wrapper">
                     <canvas id="bezier-canvas"></canvas>
                 </div>
-                <a href="/numerical-analysis/lagrange-polynomial.html" target="_blank">
+                <a href="/numerical-analysis/lagrange-polynomial.html">
                     <div class="goto-button">
                         <p>Explore Bezier Curvers</p>
                         <svg viewBox = "0 0 100 100">
@@ -195,7 +195,7 @@
                 <div class="tool-preview-wrapper">
                     <canvas id="lagrange-canvas"></canvas>
                 </div>
-                <a href="/numerical-analysis/lagrange-polynomial.html" target="_blank">
+                <a href="/numerical-analysis/lagrange-polynomial.html">
                     <div class="goto-button">
                         <p>Explore Lagrange Polynomial</p>
                         <svg viewBox = "0 0 100 100">
@@ -255,7 +255,7 @@
                 <div class="tool-preview-wrapper">
                     <canvas id="spline-canvas"></canvas>
                 </div>
-                <a href="/numerical-analysis/lagrange-polynomial.html" target="_blank">
+                <a href="/numerical-analysis/lagrange-polynomial.html">
                     <div class="goto-button">
                         <p>Explore Spline Generation</p>
                         <svg viewBox = "0 0 100 100">
