--- a/root/home.html
+++ b/root/home.html
@@ -20,7 +20,7 @@
                 <p>Geometry</p>
             </a>
             <a href="#rendering-start" class="category-label" id="rendering-tab">
-                <img src="images/icons/rendering.svg">
+                /*GET_TEMPLATE(rendering-icon)*/
                 <p>Rendering</p>
             </a>
             <a href="#numerical-start" class="category-label" id="numerical-tab">
@@ -32,13 +32,13 @@
             </a>
         </nav>
         <div id="nav-pull-tab">
-            <img src="images/icons/hamburger.svg">
+            /*GET_TEMPLATE(hamburger-icon)*/
         </div>
     </div> 
     <main>
         <div class="tool-info-wrapper">
             <div class="title-ribbon">
-                <img src="images/decorations/ribbon-left.svg">
+                /*GET_TEMPLATE(ribbon-left)*/
                 <h2 id="geometry-start">Center of Gravity</h2>
             </div>
             <div class="tool-content-wrapper">
@@ -89,25 +89,14 @@
                 <a href="/numerical-analysis/lagrange-polynomial.html">
                     <div class="goto-button">
                         <p>Explore Center of Gravity</p>
-                        <svg viewBox = "0 0 100 100">
-                            <polygon points="0,0 50,0 100,50 50,100, 0,100"/>
-                        </svg>
-                        <svg class="chevron-1" viewBox = "0 0 100 100">
-                            <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-                        </svg>
-                        <svg class="chevron-2" viewBox = "0 0 100 100">
-                            <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-                        </svg>
-                        <svg class="chevron-3" viewBox = "0 0 100 100">
-                            <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-                        </svg>
+                        /*GET_TEMPLATE(button-chevrons)*/
                     </div>
-                    </a>
+                </a>
             </div>
         </div>
         <div class="tool-info-wrapper">
             <div class="title-ribbon">
-                <img src="images/decorations/ribbon-left.svg">
+                /*GET_TEMPLATE(ribbon-left)*/
                 <h2 id="rendering-start">Bezier Curves</h2>
             </div>
             <div class="tool-content-wrapper">
@@ -151,25 +140,14 @@
                 <a href="/numerical-analysis/lagrange-polynomial.html">
                     <div class="goto-button">
                         <p>Explore Bezier Curvers</p>
-                        <svg viewBox = "0 0 100 100">
-                            <polygon points="0,0 50,0 100,50 50,100, 0,100"/>
-                        </svg>
-                        <svg class="chevron-1" viewBox = "0 0 100 100">
-                            <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-                        </svg>
-                        <svg class="chevron-2" viewBox = "0 0 100 100">
-                            <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-                        </svg>
-                        <svg class="chevron-3" viewBox = "0 0 100 100">
-                            <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-                        </svg>
+                        /*GET_TEMPLATE(button-chevrons)*/
                     </div>
-                    </a>
+                </a>
             </div>
         </div>
         <div class="tool-info-wrapper">
             <div class="title-ribbon">
-                <img src="images/decorations/ribbon-left.svg">
+                /*GET_TEMPLATE(ribbon-left)*/
                 <h2 id="numerical-start">Lagrange Interpolating Polynomial</h2>
             </div>
             <div class="tool-content-wrapper">
@@ -198,25 +176,14 @@
                 <a href="/numerical-analysis/lagrange-polynomial.html">
                     <div class="goto-button">
                         <p>Explore Lagrange Polynomial</p>
-                        <svg viewBox = "0 0 100 100">
-                            <polygon points="0,0 50,0 100,50 50,100, 0,100"/>
-                        </svg>
-                        <svg class="chevron-1" viewBox = "0 0 100 100">
-                            <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-                        </svg>
-                        <svg class="chevron-2" viewBox = "0 0 100 100">
-                            <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-                        </svg>
-                        <svg class="chevron-3" viewBox = "0 0 100 100">
-                            <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-                        </svg>
+                        /*GET_TEMPLATE(button-chevrons)*/
                     </div>
-                    </a>
+                </a>
             </div>
         </div>
         <div class="tool-info-wrapper">
             <div class="title-ribbon">
-                <img src="images/decorations/ribbon-left.svg">
+                /*GET_TEMPLATE(ribbon-left)*/
                 <h2>Spline Generation</h2>
             </div>
             <div class="tool-content-wrapper">
@@ -258,20 +225,9 @@
                 <a href="/numerical-analysis/lagrange-polynomial.html">
                     <div class="goto-button">
                         <p>Explore Spline Generation</p>
-                        <svg viewBox = "0 0 100 100">
-                            <polygon points="0,0 50,0 100,50 50,100, 0,100"/>
-                        </svg>
-                        <svg class="chevron-1" viewBox = "0 0 100 100">
-                            <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-                        </svg>
-                        <svg class="chevron-2" viewBox = "0 0 100 100">
-                            <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-                        </svg>
-                        <svg class="chevron-3" viewBox = "0 0 100 100">
-                            <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-                        </svg>
+                        /*GET_TEMPLATE(button-chevrons)*/
                     </div>
-                    </a>
+                </a>
             </div>
         </div>
     </main>
