--- a/root/numerical-analysis/lagrange-polynomial.html
+++ b/root/numerical-analysis/lagrange-polynomial.html
@@ -73,16 +73,16 @@
         </div>
         <div id="timeline-controls">
             <div class="timeline-button" id="step-start">
-                <img src="/images/visual-tool/step-start.svg">
+                /*GET_TEMPLATE(step-start-button)*/
             </div>
             <div class="timeline-button" id="step-back">
-                <img src="/images/visual-tool/step-back.svg">
+                /*GET_TEMPLATE(step-back-button)*/
             </div>
             <div class="timeline-button" id="step-forward">
-                <img src="/images/visual-tool/step-forward.svg">
+                /*GET_TEMPLATE(step-forward-button)*/
             </div>
             <div class="timeline-button" id="step-finish">
-                <img src="/images/visual-tool/step-end.svg">
+                /*GET_TEMPLATE(step-end-button)*/
             </div>
         </div>
     </main>
