--- a/root/about.html
+++ b/root/about.html
@@ -27,18 +27,7 @@
         </p>
         <a class="goto-button" href="https://www.jethros.space/" target="_blank">
             <p>Portfolio - jethros.space</p>
-            <svg viewBox = "0 0 100 100">
-                <polygon points="0,0 50,0 100,50 50,100, 0,100"/>
-            </svg>
-            <svg class="chevron-1" viewBox = "0 0 100 100">
-                <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-            </svg>
-            <svg class="chevron-2" viewBox = "0 0 100 100">
-                <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-            </svg>
-            <svg class="chevron-3" viewBox = "0 0 100 100">
-                <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-            </svg>
+            /*GET_TEMPLATE(button-chevrons)*/
         </a>
         <h2>Is this project open source?</h2>
         <p>
@@ -48,18 +37,7 @@
         </p>
         <a class="goto-button" href="https://github.com/JSchoppe/educational-math-site" target="_blank">
             <p>Github Repository</p>
-            <svg viewBox = "0 0 100 100">
-                <polygon points="0,0 50,0 100,50 50,100, 0,100"/>
-            </svg>
-            <svg class="chevron-1" viewBox = "0 0 100 100">
-                <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-            </svg>
-            <svg class="chevron-2" viewBox = "0 0 100 100">
-                <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-            </svg>
-            <svg class="chevron-3" viewBox = "0 0 100 100">
-                <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-            </svg>
+            /*GET_TEMPLATE(button-chevrons)*/
         </a>
         <h3>What tools were used to make this?</h3>
         <p>
@@ -69,93 +47,27 @@
         </p>
         <a class="goto-button" href="https://aws.amazon.com/" target="_blank">
             <p>Amazon Web Services</p>
-            <svg viewBox = "0 0 100 100">
-                <polygon points="0,0 50,0 100,50 50,100, 0,100"/>
-            </svg>
-            <svg class="chevron-1" viewBox = "0 0 100 100">
-                <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-            </svg>
-            <svg class="chevron-2" viewBox = "0 0 100 100">
-                <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-            </svg>
-            <svg class="chevron-3" viewBox = "0 0 100 100">
-                <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-            </svg>
+            /*GET_TEMPLATE(button-chevrons)*/
         </a>
         <a class="goto-button" href="https://www.blender.org/" target="_blank">
             <p>Blender</p>
-            <svg viewBox = "0 0 100 100">
-                <polygon points="0,0 50,0 100,50 50,100, 0,100"/>
-            </svg>
-            <svg class="chevron-1" viewBox = "0 0 100 100">
-                <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-            </svg>
-            <svg class="chevron-2" viewBox = "0 0 100 100">
-                <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-            </svg>
-            <svg class="chevron-3" viewBox = "0 0 100 100">
-                <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-            </svg>
+            /*GET_TEMPLATE(button-chevrons)*/
         </a>
         <a class="goto-button" href="https://inkscape.org/" target="_blank">
             <p>Inkscape</p>
-            <svg viewBox = "0 0 100 100">
-                <polygon points="0,0 50,0 100,50 50,100, 0,100"/>
-            </svg>
-            <svg class="chevron-1" viewBox = "0 0 100 100">
-                <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-            </svg>
-            <svg class="chevron-2" viewBox = "0 0 100 100">
-                <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-            </svg>
-            <svg class="chevron-3" viewBox = "0 0 100 100">
-                <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-            </svg>
+            /*GET_TEMPLATE(button-chevrons)*/
         </a>
         <a class="goto-button" href="https://www.getpaint.net/" target="_blank">
             <p>Paint.NET</p>
-            <svg viewBox = "0 0 100 100">
-                <polygon points="0,0 50,0 100,50 50,100, 0,100"/>
-            </svg>
-            <svg class="chevron-1" viewBox = "0 0 100 100">
-                <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-            </svg>
-            <svg class="chevron-2" viewBox = "0 0 100 100">
-                <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-            </svg>
-            <svg class="chevron-3" viewBox = "0 0 100 100">
-                <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-            </svg>
+            /*GET_TEMPLATE(button-chevrons)*/
         </a>
         <a class="goto-button" href="https://code.visualstudio.com/" target="_blank">
             <p>Visual Studio Code</p>
-            <svg viewBox = "0 0 100 100">
-                <polygon points="0,0 50,0 100,50 50,100, 0,100"/>
-            </svg>
-            <svg class="chevron-1" viewBox = "0 0 100 100">
-                <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-            </svg>
-            <svg class="chevron-2" viewBox = "0 0 100 100">
-                <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-            </svg>
-            <svg class="chevron-3" viewBox = "0 0 100 100">
-                <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-            </svg>
+            /*GET_TEMPLATE(button-chevrons)*/
         </a>
         <a class="goto-button" href="https://fonts.google.com/" target="_blank">
             <p>Google Fonts</p>
-            <svg viewBox = "0 0 100 100">
-                <polygon points="0,0 50,0 100,50 50,100, 0,100"/>
-            </svg>
-            <svg class="chevron-1" viewBox = "0 0 100 100">
-                <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-            </svg>
-            <svg class="chevron-2" viewBox = "0 0 100 100">
-                <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-            </svg>
-            <svg class="chevron-3" viewBox = "0 0 100 100">
-                <polygon points="0,0 25,0 75,50 25,100, 0,100 50,50"/>
-            </svg>
+            /*GET_TEMPLATE(button-chevrons)*/
         </a>
         <h3>Why not use libraries?</h3>
         <p>
