Updates to SVGs
More of the SVG assets have been optimized and inlined, CSS changed to reflect >svg elements instead of >img elements

--- a/root/about.html
+++ b/root/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg" href="/images/icons/favicon.svg">
+    <link rel="icon" type="image/svg" href="images/favicon_optimized.svg">
     <link rel="stylesheet" type="text/css" href="styles/general.css">
     <link rel="stylesheet" type="text/css" href="styles/about.css">
     <script src="scripts/globals/polyfill.js"></script>
@@ -12,7 +12,7 @@
 </head>
 <body>
     <main>
-        <a href="home.html"><img id="site-logo" src="images/decorations/site-logo.svg"></a>
+        <a href="home.html">/*GET_TEMPLATE(site-logo)*/</a>
         <h2>What is Math Vision?</h2>
         <p>
             Math Vision is a static website designed to experiment with animation and visualizations
