--- a/root/images/svg-source/ribbon-inline-svg.html
+++ b/root/images/svg-source/ribbon-inline-svg.html
@@ -1,11 +1,11 @@
 /*TEMPLATE_BEGIN(ribbon-left)*/
-<svg viewBox="0 0 16 16">
+<svg class="ribbon-left" viewBox="0 0 16 16">
     <path d="m8 2s-2.5-3.15e-5 -2.5 0.5v1.4532c-0.70307 0.026367-1.5 0.046827-1.5 0.046827h-3l3 3v6l-3 3h3s4 0 4-0.5v-1.5h8v-12z" style="fill:#747de1"/>
     <path d="m8 5s-2.5-3.15e-5 -2.5 0.5v1.4531c-0.70312 0.026367-1.5 0.046875-1.5 0.046875l-3 3 3 3s0.79688-0.02051 1.5-0.04687v-1.4531c0-0.5 2.5-0.5 2.5-0.5h8v-6z" style="fill:#0f1553"/>
 </svg>
 /*TEMPLATE_END*/
 /*TEMPLATE_BEGIN(ribbon-middle)*/
-<svg viewBox="0 0 16 16">
+<svg class="ribbon-middle" viewBox="0 0 16 16" preserveAspectRatio="none">
     <path d="m16 14h-16v-12h16z" style="fill-rule:evenodd;fill:#747de1"/>
     <path d="m0 11h16v-6h-16z" style="fill-rule:evenodd;fill:#0f1553"/>
 </svg>
