--- a/root/images/svg-source/icons-inline-svg.html
+++ b/root/images/svg-source/icons-inline-svg.html
@@ -40,3 +40,39 @@
     <path d="m12.5 3.5h1v1h-1z" style="fill-rule:evenodd"/>
 </svg>
 /*TEMPLATE_END*/
+
+/*TEMPLATE_BEGIN(geometry-icon)*/
+<svg viewBox="0 0 64 64">
+    <path d="m62 2-60 60h15v-1s0-1 1-1 1 1 1 1v1h2v-5s0-1 1-1 1 1 1 1l-1e-6 5h2v-1s0-1 1-1 1 1 1 1v1h2v-5s0-1 1-1 1 1 1 1l0.0078 5h1.9922v-1s0-1 1-1 1 1 1 1v1h2v-5s0-1 1-1 1 1 1 1l0.0078 5h1.9922v-1s0-1 1-1 1 1 1 1v1h2v-5s0-1 1-1 1 1 1 1l0.0078 5h1.9922v-1s0-1 1-1 1 1 1 1v1h2v-5s0-1 1-1 1 1 1 1l0.0078 5h1.9922v-1s0-1 1-1 1 1 1 1v1h3zm-8 18v32h-32z" style="fill-rule:evenodd"/>
+    <circle cx="10" cy="10" r="6" style="fill-rule:evenodd;paint-order:markers stroke fill"/>
+    <path d="m9 42s1 4 1 6c0-2 1-6 1-6l0.2-22h0.8v-10h-4v10h0.8z" style="fill-rule:evenodd"/>
+</svg>
+/*TEMPLATE_END*/
+
+/*TEMPLATE_BEGIN(numerical-analysis-icon)*/
+<svg viewBox="0 0 64 64">
+    <path d="m34 50v-4l6-6h2v4l-4 4 4 4v4h-2z"/>
+    <path d="m60 46v4l-6 6h-2v-4l4-4-4-4v-4h2z"/>
+    <path d="m52 36h-4l-6 24h4z"/>
+    <path d="m5 32h6v8s0 5 5 5h8v-5l8 8-8 8v-5h-8s-11 0-11-11z" style="fill-rule:evenodd"/>
+    <path d="m10 8s0-4-1-4c-3 0-3 4-3 4 0 6 2 10 2 16 0 0 0 4-3 4-1 0-1-4-1-4" style="fill:none;stroke-width:3;stroke:#000"/>
+    <path d="m11 25s1 1 2 1c3 0 3-9 3-9s0-9 3-9 3 3 3 3" style="fill:none;stroke-width:3;stroke:#000"/>
+    <path d="m11 18h9" style="fill:none;stroke-width:3;stroke:#000"/>
+    <path d="m23 26s-2-1-2-4 3-6 3-6" style="fill:none;stroke-width:3;stroke:#000"/>
+    <path d="m26 19s1-2 2-2c2 0 1 10 3 8l1-1" style="fill:none;stroke-width:3;stroke:#000"/>
+    <path d="m25 26 8-10" style="fill:none;stroke-width:3;stroke:#000"/>
+    <path d="m35 16s2 1 2 4-3 6-3 6" style="fill:none;stroke-width:3;stroke:#000"/>
+    <path d="m53 19s1-2 2-2c2 0 1 10 3 8l1-1" style="fill:none;stroke-width:3;stroke:#000"/>
+    <path d="m52 26 8-10" style="fill:none;stroke-width:3;stroke:#000"/>
+    <path d="m49 27 1-19" style="fill:none;stroke-width:3;stroke:#000"/>
+    <path d="m46 18c1 0 4 1 3 4s-4 3-5 3-4-1-3-4 4-3 5-3z" style="fill:none;stroke-width:3;stroke:#000"/>
+</svg>
+/*TEMPLATE_END*/
+
+/*TEMPLATE_BEGIN(return-home-icon)*/
+<svg viewBox="0 0 64 64">
+    <path d="m34 2-28 7v42l1 1 4-1 16 12v-39l-16-12 20-5v39l4-1v-42z" style="fill-rule:evenodd"/>
+    <path d="m29 55v-8l12 5-4 1 3 3s3 3 7 2 1-4 1-4l-7-7 4-1 7 7s6 6-2 8-14-4-14-4l-3-3z" style="fill-rule:evenodd"/>
+    <path d="m41 12s-2 0-2 2v16c0 2 2 2 2 2h16s2 0 2-2v-16c0-2-2-2-2-2zm8 2 2 2v-1h2v3l4 4h-3v8h-5v-5h-3v5h-2v-8h-3z" style="fill-rule:evenodd"/>
+</svg>
+/*TEMPLATE_END*/
