--- a/root/numerical-analysis/lagrange-polynomial.html
+++ b/root/numerical-analysis/lagrange-polynomial.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/styles/general.css">
     <link rel="stylesheet" type="text/css" href="/styles/visualization-tool.css">
-    <link rel="icon" type="image/png" href="/images/icons/favicon.png">
+    <link rel="icon" type="image/svg" href="images/favicon_optimized.svg">
     <script src="/scripts/globals/polyfill.js"></script>
     <script src="/scripts/globals/core.js"></script>
     <script src="/scripts/globals/file-helper.js"></script>
@@ -17,7 +17,7 @@
             <nav>
                 <a href="/home.html">
                     <div class="tab">
-                        <img src="/images/icons/home.svg">
+                        /*GET_TEMPLATE(return-home-icon)*/
                     </div>
                 </a>
             </nav>
@@ -53,7 +53,7 @@
             </div>
         </div>
         <div id="title-ribbon">
-            <img src="/images/decorations/ribbon-left.svg">
+            /*GET_TEMPLATE(ribbon-left)*/
             <h2>Lagrange Interpolating Polynomial</h2>
         </div>
         <div class="pane" id="input-fields">
